fixing overflowing text on mini-cart product description

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -658,8 +658,11 @@ body[class*='checkout'] #header-checkoutBtn { /* hides just on checkout pages */
     width: auto !important;
 }
   	
-.product-name {
-    width: 400px;
+#mini-cart .product-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 350px; /* whatever width */
 }
  	
 .btn-continue {
@@ -791,7 +794,7 @@ body[class*='checkout'] #header-checkoutBtn { /* hides just on checkout pages */
 }
 
 .discount-buttons {
-    padding-top: 10px;
+    margin-top: 10px;
 }
 /**
  * @Footer
